option java_package = "com.meizu.anystream";
option java_outer_classname = "ASMessage";


// optional int32  compression = 8 [default = 0];        数据帧的数据是否压缩，0为不压缩，可选项，默认不压缩，
// optional int32  encryption  = 9 [default = 0];        数据帧的数据是否加密，0为不加密，可选项，默认不加密

message ASMapEntity {
   optional string key = 1;
   optional string value = 2;
}

message ASDataFrame {
	
	optional string interface = 1;                        // 数据帧的存放接口，一个接口相当于数据库中的一个表，必须项


	optional int32  magic = 2 [default = 0];              // 数据帧中的数据(存放在data域中)的存储格式，0 代表 Hive默认的文本存储格式，
	                                                      // 1 代表 JSON格式。可选项，不填时默认值为0，即Hive默认的文本存储格式

	optional string partition = 3 [default = "1d"];       // 数据帧中的数据在接口中的分区粒度，由 “[整数值][单位]” 组成，
	                                                      // 单位可以是分钟(以m表示), 小时(以h表示), 或者是 天(以d表示)，比如 “1h”表示每1个小时一个分区
	
	optional bytes  data = 4;                             // 数据帧的数据
    repeated ASMapEntity ext_domain = 5;                  // 数据帧的附加数据 
    optional sint32 config_id = 6 [default = -1];         // 生成此数据帧的配置ID，可选项，主要用于调试
	optional int64  send_timestamp = 7 [default = 0];     // 数据帧的发送时间戳，单位为毫秒，可选项，主要用于调试
}

message ASCommandFrame {

    optional int64 send_timestamp = 1 [default = 0];      // 指令的发送时间，可选项，单位为毫秒，可用于调试
    optional int32 command = 2 [default = 0];             // 指令帧的控制指令, 必须项, 0x01 为心跳, 0x02为启动, 0x04为停止

    repeated ASMapEntity parameter = 3;                   // 控制指令的参数，可选项，默认为空

}

